<resources>
    <string name="app_name">Coffee Me</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_enter">EnterActivity</string>
    <string name="str_walk_around">随便逛逛</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>

    <string name="str_hint_phone">请输入手机号码</string>
    <string name="str_hint_smscode">请输入短信验证码</string>
    <string name="str_text_agree">注册登录即表示您同意我们的<u>用户许可协议</u></string>
    <string name="str_hint_password">请输入密码</string>
    <string name="str_text_next">下一步</string>
    <string name="getcodeok">验证码已发送至您手机</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_hint_password_lw">请输入密码（至少6位）</string>
    <string name="str_hint_referralcode">请输入邀请码（可不填）</string>
    <string name="str_back2login">返回登录</string>
    <string name="title_activity_forget_psd">ForgetPsdActivity</string>
    <string name="str_hint_nonet">连不上网了，好伤心</string>
    <string name="str_validatephone">验证手机</string>
    <string name="str_err_nophonenumber">手机号为空</string>
    <string name="str_err_nophonesmscode">电话号码或验证码为空</string>
    <string name="str_err_supphone">仅支持11位中国大陆手机号</string>
    <string name="str_err_smscode">验证码不正确</string>
    <string name="str_err_phonesmscode">手机号或验证码错误</string>
    <string name="str_hint_newpassword_lw">请输入至少6位密码</string>
    <string name="str_hint_repassword">请再次输入密码</string>
    <string name="str_complete">完成</string>
    <string name="str_err_password">密码不能为空</string>
    <string name="str_err_diffpassword">两次输入密码不一致</string>
    <string name="str_resetpassword">重置密码</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="title_activity_culture_detail">CultureDetailActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_location2">Location2Activity</string>
    <string name="title_activity_find_vending_machine">FindVendingMachineActivity</string>
    <string name="title_activity_changepsd">ChangepsdActivity</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="aboutus">关于我们</string>
    <!--<string name="aboutus">&#160;&#160;&#160;&#160;杭州锦业科技有限公司，2015年被评为区科技企业，拥有多项专利立志用互联网技术结合自动化技术重塑服务行业。公司业务包括：互联网智能咖啡机、电子产品、计算机软硬件的技术开发、销售等。</string>-->
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \\nRefresh Token：%2$s \\nexpires_in：%3$s</string>
    <string name="str_cancel">取消操作</string>

    <string name="title_mybalance">我的余额</string>
    <string name="title_balance">账户余额</string>
    <string name="title_rec">收支明细</string>
    <string name="title_recharge">充值</string>
    <string name="title_money">金额(元)：</string>
    <string name="title_moneyhint">请输入金额(不得超过200元)</string>
    <string name="title_alipay">支付宝支付</string>
    <string name="sectitle_alipay">推荐有支付宝账号的用户使用</string>
    <string name="title_wchat">微信支付</string>
    <string name="sectitle_wchat">推荐有微信账号的用户使用</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">松开刷新数据</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多了</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">last update：</string>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>

    <string name="PayViaAlipay">支付宝支付</string>
    <string name="PayViaWechat">微信支付</string>
    <string name="PayViaCoffeeme">微信支付</string>
    <string name="NoPay">未支付</string>
    <string name="PayViaBalance">账户余额支付</string>
    <string name="PaySuccess">待取</string>
    <string name="RefundAll">退款成功</string>
    <string name="PayCancel">待支付</string>
    <string name="RefundPart">部分退款成功</string>
    <string name="TakeAll">已完成</string>
    <string name="TakePart">部分已取</string>
    <string name="PayNo">待支付</string>
    <string name="version">版本号:</string>
    <string name="Intro1">&#160;&#160;&#160;&#160;【coffee me】是一款为咖啡爱好者打造的的个性化咖啡购买平台，通过该平台设置具体的咖啡制作参数，并通过“APP线上订单 + 极伽智能咖啡机”线上线下结合的模式，为用户提供高效、快捷的私人定制咖啡饮品。</string>
    <string name="Intro2">&#160;&#160;&#160;&#160;  通过“线上设置参数产生订单+线下智能终端咖啡机取货”的模式，面向写字楼、商业楼、购物广场等咖啡机投放场所消费群，提供24小时个性化服务，充分满足咖啡消费者的个性化要求，解决用户咖啡饮品消费习惯的差异性问题，系统改善用户的传统]消费习惯和生活方式，创新并升级用户消费体验，开创美好智慧生活。</string>
    <string name="copyright">Copyright@2015-2018</string>
    <string name="company_name">杭州锦业科技有限公司</string>
    <string name="str_phone">手机号（选填）：</string>
    <string name="str_hint_email">请输入邮箱</string>
    <string name="str_email">邮&#160;&#160;&#160;&#160;箱（必填）：</string>
    <string name="str_hint">请输入您的宝贵意见</string>
    <string name="str_nocontent">没有内容</string>
    <string name="str_nocoupon">优惠码为空</string>
    <string name="str_err_net">网络错误</string>

    <string name="Cart_noselinfo">你没有选择饮品</string>
    <string name="cart_count_max_value">99+</string>
    <string name="Scan_TO_Pick">扫一扫取单</string>
    <string name="share">分享</string>
    <string name="buy_more">再来一单</string>
    <string name="rebuy">重新下单</string>
    <string name="repick">继续取单</string>
    <string name="fail">发生错误</string>
    <string name="Refund">退款</string>
    <string name="share_fail">分享失败</string>
    <string name="err_coupon">优惠券有误，请不要使用</string>
    <string name="str_person_setting">个人设置</string>
    <string name="str_nobind">未绑定</string>
    <string name="str_binded">已绑定</string>
    <string name="str_unbind">解除绑定</string>
    <string name="str_cannotbind">无法绑定</string>
    <string name="str_countlimit">最多选择9件饮品</string>
    <string name="str_dataerr">数据错误</string>
    <string name="str_concentration">咖啡浓度</string>
    <string name="str_norefreral_code">没有分享码</string>
    <string name="str_switchpaymethod">切换支付方式</string>
    <string name="str_coffeemepocket">Coffee Me钱包支付</string>
    <string name="str_cropfail">截取失败</string>
    <string name="str_outofbound">越界了</string>
    <string name="network_error_info">网络连接不可用，请稍后重试</string>
    <string name="str_loadmore">上拉加载更多...</string>
    <string name="str_refresh">下拉刷新</string>
    <string name="str_loading">正在加载...</string>
    <string name="str_pushload">上拉加载</string>
    <string name="str_releasetoload">松开加载</string>
    <string name="supportus">打分支持我们</string>
    <string name="string_contiexchange">继续兑换</string>
    <string name="string_mycoupons">我的优惠券</string>
    <string name="string_exchangesuccess">兑换成功</string>
    <string name="string_currentpoints">当前积分:</string>
    <string name="title_pointexchange">积分兑换</string>
    <string name="point_shop">积分商城</string>
    <string name="string_paysuccess">支付成功</string>
    <string name="userrate">会员等级:</string>
    <string name="aboutpoint"><u>关于积分?</u></string>
    <string name="str_availablepoints">可用积分</string>
    <string name="string_pointrate">积分等级</string>
    <string name="string_orderid">订单编号：</string>
    <string name="string_pointrecord">积分记录</string>
    <string name="thingaboutpoint">关于积分的一些事</string>
    <string name="string_aboutpoint">关于积分</string>
    <string name="paymentact_ok">确定</string>
    <string name="aboutpoint_historypoint">历史积分</string>
    <string name="string_infotype">信息类别</string>
    <string name="PayViaPoint">积分抵扣</string>
    <string name="single_string">%s</string>
    <string name="str_newversioninfo">新版本说明</string>
    <string name="str_ignore">忽略该版本</string>
    <string name="str_update">更新</string>
    <string name="str_smscode">短信验证码</string>
    <string name="str_hint_fourcode">请输入4位验证码</string>
    <string name="str_balance">余额:%s元</string>
    <string name="str_end_date">2099.12.31</string>
    <string name="str_wechatpay">微信支付</string>
    <string name="str_alipay">支付宝支付</string>
    <string name="bind_pwd_profit">设置登录密码后，您可以使用手机号+密码登录</string>
    <string name="string_share">邀请好友</string>
    <string name="share_title">推荐一个有关咖啡的应用！</string>
    <string name="string_success_order">支付成功</string>
    <string name="str_detail_recipe">配方详情</string>
    <string name="string_clipsuccess">配方卡已生成</string>
    <string name="copy_recipe">复制这条信息，打开#coffeeme#，查看我的专属配方</string>
    <string name="str_hint_newpassword_null">密码不能为空</string>
    <string name="add_cart_success">添加购物车成功</string>
    <string name="no_sugar">不甜</string>
    <string name="three_points_sweet">3分甜</string>
    <string name="five_points_sweet">5分甜</string>
    <string name="seven_points_sweet">7分甜</string>
    <string name="coupon_info_exchange_first">1. 找到支持Coffee Me取货的极伽咖啡机（可在APP首页附近咖啡机查找），点 击咖啡机“取货”按钮，使用APP当前页面“扫一扫取货”功能去扫描咖啡机页面 的取货二维码取货;</string>
    <string name="coupon_info_discount_first">1.在本APP上下单购买您喜欢的饮品，并在支付页选择要使用的优惠券就能享受相应的优惠;</string>
    <string name="coupon_info_second">2. 优惠券过期将作废，请尽早使用;</string>
    <string name="coupon_info_three">3. 如有疑问请联系客服热线 400-8537-100</string>
    <string name="check_more">查看更多</string>
    <string name="member_benefits">会员福利</string>
    <string name="leave_goode_untake">部分已取（剩余%d杯）</string>
    <string name="new_item">新品</string>
    <string name="check_package">查看套餐</string>
    <string name="go_pay">去支付</string>
    <string name="package_tip_1">1.购买成功后，套餐中所包含咖啡会以咖啡兑换券的形式发放至Coffee Me APP \"我的兑换券\"中,进入兑换券详情页面可以设置饮品甜度；</string>
    <string name="package_tip_2">2.找到支持Coffee Me取货的极伽咖啡机（可在APP  首页附近咖啡机查找），点击咖啡机“取货”按钮，  使用兑换券详情页面“扫一扫取货”功能去扫描咖啡机页面的取货二维码取货；</string>
    <string name="package_tip_3">3.购买套餐不支持使用优惠券；</string>
    <string name="package_tip_4">4.购买套餐不支持退货；</string>
    <string name="package_tip_5">5.如有疑问请联系客服热线 400-8537-100；</string>
    <string name="package_content">套餐内容</string>


</resources>
