<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/little_white"
        android:orientation="vertical"
        tools:context="com.hzjytech.coffeeme.me.FeedbackActivity">

        <include layout="@layout/titlebar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/normal_grey" />


        <EditText
            android:id="@+id/etFeedbackOpnion"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/normal_white"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/str_hint"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColorHint="@color/standard_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/normal_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/normal_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/normal_white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/str_phone"
                android:textColor="@color/standard_black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/etFeedbackPhone"
                android:textCursorDrawable="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入手机号"
                android:gravity="right"
                android:paddingRight="20dp"
                android:maxLength="11"
                android:textColorHint="@color/standard_grey"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/normal_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/normal_white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/str_email"
                android:textColor="@color/standard_black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/etFeedbackEmail"
                android:textCursorDrawable="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/str_hint_email"
                android:gravity="right"
                android:paddingRight="20dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/standard_grey"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/normal_grey" />

        <Button
            android:id="@+id/btnFeedbackCommit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_circ_rec_green"
            android:text="提交"
            android:textColor="@color/normal_white"
            android:textSize="15dp" />

    </LinearLayout>